fix most IE layout issues; TODO news

--- a/source/_assets/sass/_style_classes.scss
+++ b/source/_assets/sass/_style_classes.scss
@@ -113,7 +113,7 @@ p, ul, dl, ol {
   .contact-us-box {
     &> h2 { width: 100%; clear:both; text-align: center; margin-top:0; }
     .content-blocks { display:flex; flex-direction: row; margin-bottom: 0; 
-      .content-block { flex: 1; padding-right: .5rem;}
+      .content-block { flex-grow:1; padding-right: .5rem;}
       h3 { margin-top:0;}
     }
   
