--- a/source/_assets/sass/_style_layout.scss
+++ b/source/_assets/sass/_style_layout.scss
@@ -37,9 +37,10 @@
 @media (max-width: $screen-md - 1) {
   
   .layout-master { 
-    height: 100%;
+    // height: 100vh;
     &.program-option .layout-has-sidebar {
       // flex-direction: column-reverse; 
+      min-height: auto;
       order: 3;
       .sidebar-container{  
         order: 2;
@@ -51,12 +52,13 @@
     .layout-has-sidebar {  
       display: flex;
       flex-direction: column;
-      min-height: 100%;
+      // min-height: 100%;
+      min-height: 100vh;
       .sidebar-container, .content-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        min-height: 100%;
+        // min-height: 100%;
       }
     }
   }
@@ -168,11 +170,11 @@
     .layout-has-left-nav {  
       display: flex;
       flex-direction: column;
-      .left-nav {   flex: 1; order:3;  }
+      .left-nav {   flex-grow: 1; flex-shrink: 1; order:3;  }
       .sidebar-container{  
         order: 2;
       }
-      .content-container {   flex: 1; flex-direction: column; order: 1;}
+      .content-container {   flex-grow: 1;flex-shrink: 1; flex-direction: column; order: 1;}
     }
   }
   .content-has-header-img {
@@ -297,4 +299,14 @@
     // background-color: rgba(255, 0, 0, 0.2);
     padding-top: 2rem; padding-bottom: 1rem;
   }
+}
+
+// Holy grail layout
+body {
+  display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+.layout-master {
+  flex-grow: 1;
 }
