--- a/source/_assets/sass/_style_news.scss
+++ b/source/_assets/sass/_style_news.scss
@@ -32,7 +32,7 @@
     div:first-child { padding-left: 0;}
     div:last-child { padding-right: 0;}
     .datetime { padding-top:0;}
-    .article-info-container { display:flex; justify-content: center; flex-direction: column;}
+    .article-info-container { display:flex; width: 100%; flex-grow: 1; justify-content: center; flex-direction: column;}
     .image-container, .image-container + .article-info-container { width: 50%; }
   }
 } 
